<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.nutrehogar</groupId>
    <artifactId>SistemaContable</artifactId>
    <version>1.5-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>Sistema Contable</name>
    <url>https://github.com/TrotmanCH/Contabilidad-Nutre-Hogar</url>
    <description>
        Este proyecto es una aplicación de escritorio para la gestión contable de Nutre Hogar.
        Permite el registro y control de transacciones contables, incluyendo la generación de reportes de libro diario
        mayor y general.
    </description>
    <inceptionYear>2024</inceptionYear>

    <organization>
        <name>Nutre Hogar</name>
        <url>https://www.nutrehogar.net/</url>
    </organization>

    <developers>
        <developer>
            <id>Calcifer1331</id>
            <name>Yoseph Arauz</name>
            <email>Calcifer1331@hotmail.com</email>
            <url>https://github.com/Calcifer1331</url>
            <roles>
                <role>Software Developer</role>
                <role>Full Stack Developer</role>
                <role>Tester</role>
                <role>Data Engineer</role>
            </roles>
            <organization>
                Universidad Tecnológica de Panamá
                Centro Regional de Bocas del Toro
            </organization>
            <organizationUrl>https://bt.utp.ac.pa/</organizationUrl>
            <properties>
                <organizationEmail>yoseph.arauz@utp.ac.pa</organizationEmail>
            </properties>
        </developer>
        <developer>
            <id>JaysonG05 </id>
            <name>Jayson Grant</name>
            <email>jaysonc-09@outlook.es</email>
            <url>https://github.com/JaysonG05</url>
            <roles> 
                <role>Software Developer</role>
                <role>Full Stack Developer</role>
            </roles>
            <organization>
                Universidad Tecnológica de Panamá
                Centro Regional de Bocas del Toro
            </organization>
            <organizationUrl>https://bt.utp.ac.pa/</organizationUrl>
            <properties>
                <organizationEmail>yoseph.arauz@utp.ac.pa</organizationEmail>
            </properties>
        </developer>
        <developer>

        </developer>
    </developers>

    <contributors>
        <contributor>
            <name></name>
        </contributor>
    </contributors>

    <licenses>
        <license>
            <name>Apache License</name>
            <url>http://www.apache.org/licenses/</url>
            <distribution>manual</distribution>
        </license>
    </licenses>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <exec.mainClass>com.nutrehogar.sistemacontable.ui.view.Menu
        </exec.mainClass> <!-- Asegúrate de especificar tu clase principal -->
    </properties>

    <dependencies>
        <!-- https://mvnrepository.com/artifact/org.hibernate.orm/hibernate-core -->
        <dependency>
            <groupId>org.hibernate.orm</groupId>
            <artifactId>hibernate-core</artifactId>
            <version>6.6.1.Final</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-envers -->
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-envers</artifactId>
            <version>6.6.1.Final</version>
            <type>pom</type>
        </dependency>

        <!-- DEPENDENCIAS PARA HIBERNATE -->
        <!-- https://mvnrepository.com/artifact/jakarta.persistence/jakarta.persistence-api -->
        <dependency>
            <groupId>jakarta.persistence</groupId>
            <artifactId>jakarta.persistence-api</artifactId>
            <version>3.1.0</version>
        </dependency>

        <!-- FIN DEPENDENCIAS DE HIBERNATE -->


        <!-- https://mvnrepository.com/artifact/org.hibernate.orm/hibernate-community-dialects -->
        <dependency>
            <groupId>org.hibernate.orm</groupId>
            <artifactId>hibernate-community-dialects</artifactId>
            <version>6.6.1.Final</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.46.1.3</version>
        </dependency>

        <dependency>
            <groupId>com.itextpdf</groupId>
            <artifactId>itextpdf</artifactId>
            <version>5.5.13.4</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.34</version>
            <scope>provided</scope>
        </dependency>


        <!-- Estas son medio permanentes -->
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>RELEASE</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf</artifactId>
            <version>3.5.2</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.8.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>${exec.mainClass}</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
